--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,14 @@
+body
+{
+    font-size: 20px;
+    line-height: 1.7;
+}
+
+p
+{
+    padding-bottom: 20px;
+}
+
 .navbarspacing
 {
     height: 60px;
@@ -28,24 +39,28 @@ h1
     margin-bottom: 60px;
 }
 
-.section
+article
 {
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
-.sectionheader
+article:first-of-type
 {
-    text-align: center;
-}
-
-.container
-{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 160px; /* Navbar spacing */
 }
 
 article:nth-child(even)
 {
     background-color: #ffffff;
+}
+
+.center-contents
+{
+    text-align: center;
+}
+
+.sectionheader
+{
+    text-align: center;
 }
