--- a/css/site.css
+++ b/css/site.css
@@ -4,6 +4,11 @@ body
     line-height: 1.7;
 }
 
+h1, h2, h3, h4, h5, h6
+{
+    line-height: 1.7;
+}
+
 p
 {
     margin-bottom: 30px;
@@ -68,4 +73,6 @@ article:nth-child(even)
 .sectionheader
 {
     text-align: center;
+    margin-top: 0;
+    padding-top: 0;
 }
